build header section

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Monika Waligóra</title>
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <title>Cloudbudget</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/scss/main.css" />
     <link rel="stylesheet" href="assets/slick/slick.css" />
     <link rel="stylesheet" href="assets/slick/slick-theme.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" />
-    <link rel="stylesheet" href="assets/css/navigation.css" />
+    <link rel="stylesheet" href="assets/scss/responsive.css" />
+    <link rel="stylesheet" href="assets/scss/navigation.css" />
   </head>
 
   <body>
@@ -25,27 +25,22 @@
           <button aria-label="Open Mobile Menu" class="open-mobile-menu fa-lg">
             <i class="fas fa-bars" aria-hidden="true"></i>
           </button>
-          <div class="signature-logo">
-            <h1>Monika Waligóra</h1>
+          <div class="icon-logo">
+            <img src="assets/img/cloud.png" alt="cloud icon" />
             <a href="">
               <img
                 class="logo horizontal-logo"
-                src="assets/img/logo-portfolio.png"
-                alt="Monika Waligóra logo"
-              />
-              <img
-                class="logo vertical-logo"
-                src="assets/img/logo-portfolio.png"
-                alt="Monika Waligóra logo"
+                src="assets/img/navbar__logo--transparent.png"
+                alt="Cloudbudget logo"
               />
             </a>
           </div>
           <ul class="menu">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">GitHub</a></li>
+            <li><a class="active" href="#">Overview</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Technology</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Sign up</a></li>
           </ul>
           <div class="top-menu-wrapper">
             <div class="panel panel1"></div>
@@ -54,8 +49,8 @@
               <li class="mob-block">
                 <img
                   class="logo"
-                  src="assets/img/logo-portfolio.png"
-                  alt="Monika Waligóra logo"
+                  src="assets/img/navbar__logo.png"
+                  alt="Cloudbudget logo"
                 />
                 <button
                   aria-label="Close Mobile Menu"
@@ -65,48 +60,21 @@
                 </button>
               </li>
               <li>
-                <a href="">About me</a>
+                <a href="">Overview</a>
               </li>
               <li>
-                <a href="">Projects</a>
+                <a href="">Features</a>
               </li>
               <li>
-                <a href="">GitHub</a>
+                <a href="">Technology</a>
               </li>
-              <li class="has-dropdown">
-                <a href="">
-                  Blog
-                  <i class="fas fa-chevron-down"></i>
-                </a>
-                <ul class="sub-menu">
-                  <li>
-                    <a href="">Hello Roman</a>
-                  </li>
-                  <li>
-                    <a href="">Woman in Tech</a>
-                  </li>
-                  <li>
-                    <a href="">Warsaw JS</a>
-                  </li>
-                  <li>
-                    <a href="">Summit 2019</a>
-                  </li>
-                </ul>
+              <li>
+                <a href="">Contact</a>
               </li>
-              <li class="has-dropdown">
-                <a href="">
-                  Contact
-                  <i class="fas fa-chevron-down"></i>
-                </a>
-                <ul class="sub-menu">
-                  <li>
-                    <a href="">Call me</a>
-                  </li>
-                  <li>
-                    <a href="">Send Email</a>
-                  </li>
-                </ul>
+              <li>
+                <a href="">Sign up</a>
               </li>
+
               <li>
                 <ul class="socials">
                   <li>
@@ -144,103 +112,52 @@
                 </ul>
               </li>
             </ul>
-            <button class="search">
-              <i class="fas fa-search fa-lg"></i>
-              <span>Search</span>
-            </button>
-            <form class="search-form">
-              <div>
-                <input type="search" placeholder="Search" />
-                <button aria-label="Search" type="submit">
-                  <i class="fas fa-search fa-2x" aria-hidden="true"></i>
-                </button>
-              </div>
-            </form>
           </div>
         </nav>
+      </div>
+      <div class="header__content">
+        <h1>Cloudbudget</h1>
+        <p>
+          Cloud budget management for everyone. Only €69.95 a Month After a 7
+          Day Trial of<br />
+          Up to €4.99
+        </p>
+        <button>Sign up</button>
       </div>
     </header>
     <main>
       <section>
-        <div class="center1">
-          <div>
-            <div class="polaroid-box__frame">
-              <div class="polaroid-box__content">
-                <div class="polaroid-box__image">
-                  <img src="assets/img/profile-picture.jpg" alt="" />
-                </div>
-                <div class="polaroid-box__title">
-                  <h1>Hello!</h1>
-                </div>
-                <div class="polaroid-box__text">
-                  <p>Welcome to My Portfolio.</p>
-                </div>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        <div class="features">
+          <h2>Features</h2>
+          <div class="responsive-slick">
+            <div>
+              <div class="feature__item item-1">
+                <h3>Supports All Currencies and Cards</h3>
+                <p>
+                  We support all popular currencies and is fully customizable to
+                  add
+                </p>
+                <a href="">Read More</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="polaroid-box__frame">
-              <div class="polaroid-box__content">
-                <div class="polaroid-box__image">
-                  <img src="assets/img//flowers.jpg" alt="" />
-                </div>
-                <div class="polaroid-box__title">
-                  <h1>My Story</h1>
-                </div>
-                <div class="polaroid-box__text">
-                  <p>Learn more about me</p>
-                </div>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-              </div>
+            <div class="feature__item item-2">
+              <h3>Manage your expenses on the go</h3>
+              <p>
+                You can access your account from anywhere in the world on any
+                device
+              </p>
+              <a href="">Read More</a>
             </div>
           </div>
           <div>
-            <div class="polaroid-box__frame">
-              <div class="polaroid-box__content">
-                <div class="polaroid-box__image">
-                  <img src="assets/img/pelikany.jpg" alt="" />
-                </div>
-                <div class="polaroid-box__title">
-                  <h1>Projects</h1>
-                </div>
-                <div class="polaroid-box__text">
-                  <p>Get familiar with my work</p>
-                </div>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="polaroid-box__frame">
-              <div class="polaroid-box__content">
-                <div class="polaroid-box__image">
-                  <img src="assets/img/blueleaves.jpg" alt="" />
-                </div>
-                <div class="polaroid-box__title">
-                  <h1>Blog</h1>
-                </div>
-                <div class="polaroid-box__text">
-                  <p>Read about my IT meetups</p>
-                </div>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="polaroid-box__frame">
-              <div class="polaroid-box__content">
-                <div class="polaroid-box__image">
-                  <img src="assets/img/github_PNG33.png" alt="" />
-                </div>
-                <div class="polaroid-box__title">
-                  <h1>Repozytorium</h1>
-                </div>
-                <div class="polaroid-box__text">
-                  <p>Click to visit to my GitHub proile</p>
-                </div>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-              </div>
+            <div class="feature__item item-3">
+              <h3>Cloud Budget Management Software</h3>
+              <p>
+                Our software is made so you can access and manage your budget
+              </p>
+              <a href="">Read More</a>
             </div>
           </div>
         </div>
