--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="assets/scss/main.css" />
     <link rel="stylesheet" href="assets/slick/slick.css" />
     <link rel="stylesheet" href="assets/slick/slick-theme.css" />
-    <link rel="stylesheet" href="assets/scss/responsive.css" />
-    <link rel="stylesheet" href="assets/scss/navigation.css" />
+    <link rel="stylesheet" href="assets/scss/header.css" />
+    <link rel="stylesheet" href="assets/scss/nav-responsive.css" />
   </head>
 
   <body>
@@ -37,7 +37,7 @@
           </div>
           <ul class="menu">
             <li><a class="active" href="#">Overview</a></li>
-            <li><a href="#">Features</a></li>
+            <li><a href="#features">Features</a></li>
             <li><a href="#">Technology</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Sign up</a></li>
@@ -63,7 +63,7 @@
                 <a href="">Overview</a>
               </li>
               <li>
-                <a href="">Features</a>
+                <a href="#features">Features</a>
               </li>
               <li>
                 <a href="">Technology</a>
@@ -126,7 +126,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section id="features">
         <div class="features">
           <h2>Features</h2>
           <div class="responsive-slick">
@@ -140,24 +140,25 @@
                 <a href="">Read More</a>
               </div>
             </div>
-          </div>
-          <div>
-            <div class="feature__item item-2">
-              <h3>Manage your expenses on the go</h3>
-              <p>
-                You can access your account from anywhere in the world on any
-                device
-              </p>
-              <a href="">Read More</a>
+
+            <div>
+              <div class="feature__item item-2">
+                <h3>Manage your expenses on the go</h3>
+                <p>
+                  You can access your account from anywhere in the world on any
+                  device
+                </p>
+                <a href="">Read More</a>
+              </div>
             </div>
-          </div>
-          <div>
-            <div class="feature__item item-3">
-              <h3>Cloud Budget Management Software</h3>
-              <p>
-                Our software is made so you can access and manage your budget
-              </p>
-              <a href="">Read More</a>
+            <div>
+              <div class="feature__item item-3">
+                <h3>Cloud Budget Management Software</h3>
+                <p>
+                  Our software is made so you can access and manage your budget
+                </p>
+                <a href="">Read More</a>
+              </div>
             </div>
           </div>
         </div>
