add responsive to features section

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cloudbudget</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
     <link
       rel="stylesheet"
@@ -127,37 +127,67 @@
     </header>
     <main>
       <section id="features">
+        <h2>Features</h2>
         <div class="features">
-          <h2>Features</h2>
           <div class="responsive-slick">
             <div>
-              <div class="feature__item item-1">
-                <h3>Supports All Currencies and Cards</h3>
-                <p>
-                  We support all popular currencies and is fully customizable to
-                  add
-                </p>
-                <a href="">Read More</a>
+              <div class="feature__item">
+                <div class="feature__item--image">
+                  <img
+                    src="assets/img/feature-item-1.png"
+                    alt=""
+                    title="Supports All Currencies and Cards"
+                  />
+                </div>
+                <div class="feature__item--content">
+                  <h3>Supports All Currencies and Cards</h3>
+                  <p>
+                    We support all popular currencies and is fully customizable
+                    to add
+                  </p>
+                  <a href="">Read More</a>
+                </div>
               </div>
             </div>
 
             <div>
-              <div class="feature__item item-2">
-                <h3>Manage your expenses on the go</h3>
-                <p>
-                  You can access your account from anywhere in the world on any
-                  device
-                </p>
-                <a href="">Read More</a>
-              </div>
+                <div class="feature__item">
+                    <div class="feature__item--image">
+                      <img
+                        src="assets/img/feature-item-2.png"
+                        alt=""
+                        title="Supports All Currencies and Cards"
+                      />
+                    </div>
+                    <div class="feature__item--content">
+                      <h3>Manage your expenses on the go</h3>
+                      <p>
+                          You can access your account from anywhere in the world on any
+                          device
+                      </p>
+                      <a href="">Read More</a>
+                    </div>
+                  </div>
+           
             </div>
             <div>
-              <div class="feature__item item-3">
-                <h3>Cloud Budget Management Software</h3>
-                <p>
-                  Our software is made so you can access and manage your budget
-                </p>
-                <a href="">Read More</a>
+                <div class="feature__item">
+                    <div class="feature__item--image">
+                      <img
+                        src="assets/img/feature-item-3.png"
+                        alt=""
+                        title="Supports All Currencies and Cards"
+                      />
+                    </div>
+                    <div class="feature__item--content">
+                      <h3>Cloud Budget Management Software</h3>
+                      <p>
+                          Our software is made so you can access and manage your budget
+
+                      </p>
+                      <a href="">Read More</a>
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
