--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <link rel="stylesheet" href="assets/scss/main.css" />
-    <link rel="stylesheet" href="assets/slick/slick.css" />
-    <link rel="stylesheet" href="assets/slick/slick-theme.css" />
-    <link rel="stylesheet" href="assets/scss/header.css" />
-    <link rel="stylesheet" href="assets/scss/nav-responsive.css" />
+    <link rel="stylesheet" href="src/assets/scss/main.css" />
+    <link rel="stylesheet" href="src/assets/slick/slick.css" />
+    <link rel="stylesheet" href="src/assets/slick/slick-theme.css" />
+    <link rel="stylesheet" href="src/assets/scss/header.css" />
+    <link rel="stylesheet" href="src/assets/scss/nav-responsive.css" />
   </head>
 
   <body>
@@ -196,8 +196,8 @@
     </main>
     <footer></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="assets/slick/slick.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/navigation.js"></script>
+    <script src="src/assets/slick/slick.js"></script>
+    <script src="src/assets/js/app.js"></script>
+    <script src="src/assets/js/navigation.js"></script>
   </body>
 </html>
