--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <i class="fas fa-bars" aria-hidden="true"></i>
           </button>
           <div class="icon-logo">
-            <img src="assets/img/cloud.png" alt="cloud icon" />
+            <img src="src/assets/img/cloud.png" alt="cloud icon" />
             <a href="">
               <img
                 class="logo horizontal-logo"
-                src="assets/img/navbar__logo--transparent.png"
+                src="src/assets/img/navbar__logo--transparent.png"
                 alt="Cloudbudget logo"
               />
             </a>
@@ -49,7 +49,7 @@
               <li class="mob-block">
                 <img
                   class="logo"
-                  src="assets/img/navbar__logo.png"
+                  src="src/assets/img/navbar__logo.png"
                   alt="Cloudbudget logo"
                 />
                 <button
@@ -134,7 +134,7 @@
               <div class="feature__item">
                 <div class="feature__item--image">
                   <img
-                    src="assets/img/feature-item-1.png"
+                    src="src/assets/img/feature-item-1.png"
                     alt=""
                     title="Supports All Currencies and Cards"
                   />
@@ -154,7 +154,7 @@
                 <div class="feature__item">
                     <div class="feature__item--image">
                       <img
-                        src="assets/img/feature-item-2.png"
+                        src="src/assets/img/feature-item-2.png"
                         alt=""
                         title="Supports All Currencies and Cards"
                       />
@@ -174,7 +174,7 @@
                 <div class="feature__item">
                     <div class="feature__item--image">
                       <img
-                        src="assets/img/feature-item-3.png"
+                        src="src/assets/img/feature-item-3.png"
                         alt=""
                         title="Supports All Currencies and Cards"
                       />
@@ -189,6 +189,67 @@
                     </div>
                   </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="technology">
+        <h2>Technology</h2>
+        <div class="technology">
+          <div class="technology__item">
+            <div class="technology__item--image">
+              <img src="src/assets/img/01.png" alt="">
+              <img src="src/assets/img/technology-cloud.png" alt="">
+            </div>
+            <div class="technology__item--content">
+              <h3>
+                  Cloud Storage
+              </h3>
+              <p>
+                  Access your account from anywhere in the world on any device 
+              </p>
+            </div>
+          </div>
+          <div class="technology__item">
+            <div class="technology__item--image">
+              <img src="src/assets/img/02.png" alt="">
+              <img src="src/assets/img/technology-search.png" alt="">
+            </div>
+            <div class="technology__item--content">
+              <h3>
+                  Secure
+              </h3>
+              <p>
+                  All your information is stored on secure cloud servers
+              </p>
+            </div>
+          </div>
+          <div class="technology__item">
+            <div class="technology__item--image">
+              <img src="src/assets/img/03.png" alt="">
+              <img src="src/assets/img/technology-pdf.png" alt="">
+            </div>
+            <div class="technology__item--content">
+              <h3>
+                  PDF Download
+              </h3>
+              <p>
+                  Download any of your reports in PDF format
+              </p>
+            </div>
+          </div>
+          <div class="technology__item">
+            <div class="technology__item--image">
+              <img src="src/assets/img/04.png" alt="">
+              <img src="src/assets/img/technology-csv.png" alt="">
+            </div>
+            <div class="technology__item--content">
+              <h3>
+                  CSV Download
+              </h3>
+              <p>
+                  All your information is stored on secure cloud servers
+              </p>
             </div>
           </div>
         </div>
