add responsive to technology section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <ul class="menu">
             <li><a class="active" href="#">Overview</a></li>
             <li><a href="#features">Features</a></li>
-            <li><a href="#">Technology</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="#technology">Technology</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#singUp">Sign up</a></li>
           </ul>
           <div class="top-menu-wrapper">
             <div class="panel panel1"></div>
@@ -60,19 +60,19 @@
                 </button>
               </li>
               <li>
-                <a href="">Overview</a>
+                <a href="#">Overview</a>
               </li>
               <li>
                 <a href="#features">Features</a>
               </li>
               <li>
-                <a href="">Technology</a>
+                <a href="#technology">Technology</a>
               </li>
               <li>
-                <a href="">Contact</a>
+                <a href="#contact">Contact</a>
               </li>
               <li>
-                <a href="">Sign up</a>
+                <a href="#signUp">Sign up</a>
               </li>
 
               <li>
@@ -122,7 +122,9 @@
           Day Trial of<br />
           Up to €4.99
         </p>
-        <button>Sign up</button>
+        <a href="#signUp">
+          <button>Sign up</button>
+        </a>
       </div>
     </header>
     <main>
@@ -135,7 +137,7 @@
                 <div class="feature__item--image">
                   <img
                     src="src/assets/img/feature-item-1.png"
-                    alt=""
+                    alt="Hand holding money"
                     title="Supports All Currencies and Cards"
                   />
                 </div>
@@ -155,7 +157,7 @@
                     <div class="feature__item--image">
                       <img
                         src="src/assets/img/feature-item-2.png"
-                        alt=""
+                        alt="hands holding phone"
                         title="Supports All Currencies and Cards"
                       />
                     </div>
@@ -175,7 +177,7 @@
                     <div class="feature__item--image">
                       <img
                         src="src/assets/img/feature-item-3.png"
-                        alt=""
+                        alt="office building"
                         title="Supports All Currencies and Cards"
                       />
                     </div>
@@ -185,7 +187,7 @@
                           Our software is made so you can access and manage your budget
 
                       </p>
-                      <a href="">Read More</a>
+                      <a href="#">Read More</a>
                     </div>
                   </div>
               </div>
@@ -198,8 +200,8 @@
         <div class="technology">
           <div class="technology__item">
             <div class="technology__item--image">
-              <img src="src/assets/img/01.png" alt="">
-              <img src="src/assets/img/technology-cloud.png" alt="">
+              <img src="src/assets/img/01.png" alt="1" title="1">
+              <img src="src/assets/img/technology-cloud.png" alt="Cloud Storage" title="Cloud Storage">
             </div>
             <div class="technology__item--content">
               <h3>
@@ -212,8 +214,8 @@
           </div>
           <div class="technology__item">
             <div class="technology__item--image">
-              <img src="src/assets/img/02.png" alt="">
-              <img src="src/assets/img/technology-search.png" alt="">
+              <img src="src/assets/img/02.png" alt="02" title="2">
+              <img src="src/assets/img/technology-search.png" alt="Secure" title="Secure">
             </div>
             <div class="technology__item--content">
               <h3>
@@ -226,8 +228,8 @@
           </div>
           <div class="technology__item">
             <div class="technology__item--image">
-              <img src="src/assets/img/03.png" alt="">
-              <img src="src/assets/img/technology-pdf.png" alt="">
+              <img src="src/assets/img/03.png" alt="3" title="3">
+              <img src="src/assets/img/technology-pdf.png" alt="PDF Download" title="PDF Download">
             </div>
             <div class="technology__item--content">
               <h3>
@@ -240,8 +242,8 @@
           </div>
           <div class="technology__item">
             <div class="technology__item--image">
-              <img src="src/assets/img/04.png" alt="">
-              <img src="src/assets/img/technology-csv.png" alt="">
+              <img src="src/assets/img/04.png" alt="4" title="4">
+              <img src="src/assets/img/technology-csv.png" alt="CSV Download" title="CSV Download">
             </div>
             <div class="technology__item--content">
               <h3>
