add red section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,33 @@
           </div>
         </div>
       </section>
+      <section id="red">
+        <div class="red-section">
+          <div class="red-section__content">
+            <h1>Stay focused on saving money</h1>
+            <p>
+              It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!
+            </p>
+            <div class="red-section__content--icons">
+              <img src="src/assets/img/App Download Link.png" alt="dowload app for windows google apple" title="dowload apps">
+            </div>
+          </div>
+         <div class="red-section__slider">
+            <div class="center">
+                <div>
+                    <img src="src/assets/img/red-section-slide1.png" alt="slide1">
+                  </div>
+              <div>
+                <img src="src/assets/img/red-section-slide1.png" alt="slide2">
+              </div>
+              <div>
+                  <img src="src/assets/img/red-section-slide1.png" alt="slide3">
+                </div>
+            </div>
+         </div>
+        </div>
+
+      </section>
     </main>
     <footer></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
