--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cloudbudget</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="src/favicon.ico" type="image/x-icon" />
 
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
     <link rel="stylesheet" href="src/assets/scss/main.css" />
+    <link rel="stylesheet" href="src/assets/scss/form.css" />
     <link rel="stylesheet" href="src/assets/slick/slick.css" />
     <link rel="stylesheet" href="src/assets/slick/slick-theme.css" />
-    <link rel="stylesheet" href="src/assets/scss/header.css" />
-    <link rel="stylesheet" href="src/assets/scss/nav-responsive.css" />
-    <link rel="stylesheet" href="src/assets/scss/form.css" />
+    <link rel="stylesheet" href="src/assets/css/header.css" />
+    <link rel="stylesheet" href="src/assets/css/nav-responsive.css" />
   </head>
 
   <body>
     <header>
-      <div class="page-header">
+      <div class="page-header" id="overview">
         <nav>
           <button aria-label="Open Mobile Menu" class="open-mobile-menu fa-lg">
             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -37,7 +37,7 @@
             </a>
           </div>
           <ul class="menu">
-            <li><a class="active" href="#">Overview</a></li>
+            <li><a class="active" href="#overview">Overview</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#technology">Technology</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -294,7 +294,7 @@
               
             </div>
            <div class="contact-section__form">
-              <form action="" method="post">
+              <form action="" method="post" id="form">
                   <div class="form__name">
                       <input
                       id="name"
@@ -306,7 +306,7 @@
                     />
                     <input
                     id="surname"
-                    name="name"
+                    name="surname"
                     placeholder="Last name"
                     type="text"
                     maxlength="32"
@@ -320,9 +320,10 @@
                     placeholder="Phone Number"
                     type="number"
                     pattern="[0-9]{12}"
+                    maxlength="12"
                     required
                   />
-                  <select id="service" name="service" form="">
+                  <select id="service" name="service">
                       <option value="volvo">Service</option>
                       <option value="saab">Service</option>
                       <option value="opel">Service</option>
@@ -336,10 +337,19 @@
   
         </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-section">
+        <a href="#overview">   
+          <img src="src/assets/img/navbar__logo.png" alt="back to top" title="back to top">
+          </a>   
+         <p>By Monika Waligóra</p>
+        <span> &copy; 2020 All right reserved </span>
+      </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="src/assets/slick/slick.js"></script>
     <script src="src/assets/js/app.js"></script>
     <script src="src/assets/js/navigation.js"></script>
+    <script src="src/assets/js/form.js"></script>
   </body>
 </html>
