update scrolling behavior

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                       <img
                         src="src/assets/img/feature-item-2.png"
                         alt="hands holding phone"
-                        title="Supports All Currencies and Cards"
+                        title="Manage your expenses on the go"
                       />
                     </div>
                     <div class="feature__item--content">
@@ -179,7 +179,7 @@
                       <img
                         src="src/assets/img/feature-item-3.png"
                         alt="office building"
-                        title="Supports All Currencies and Cards"
+                        title="Cloud Budget Management Software"
                       />
                     </div>
                     <div class="feature__item--content">
