--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <link rel="stylesheet" href="src/assets/scss/main.css" />
-    <link rel="stylesheet" href="src/assets/scss/form.css" />
+    <link rel="stylesheet" href="src/assets/css/main.css" />
+    <link rel="stylesheet" href="src/assets/css/form.css" />
     <link rel="stylesheet" href="src/assets/slick/slick.css" />
     <link rel="stylesheet" href="src/assets/slick/slick-theme.css" />
     <link rel="stylesheet" href="src/assets/css/header.css" />
