form select changes

--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
                     maxlength="12"
                     required
                   />
-                  <select id="service" name="service">
-                    <option value="Select service" disabled>Select service</option>
+                  <select id="select-service" name="select-service">
+                    <option value="Select service" disabled>Select Service</option>
                       <option value="Service">Service</option>
                       <option value="Service">Service</option>
                       <option value="Service">Service</option>
