--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="contact-section__content">
               <h1>Contact</h1>
               <p>
-                  Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours
+                  Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours.
               </p>
               
             </div>
@@ -344,7 +344,7 @@
           <img src="src/assets/img/navbar__logo.png" alt="back to top" title="back to top">
           </a>   
          <p>By Monika Waligóra</p>
-        <span> &copy; 2020 All right reserved </span>
+        <span> &copy; 2020 All rights reserved </span>
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
