--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
               
             </div>
            <div class="contact-section__form">
-              <form action="" id="form">
+              <form action="formSubmit.php" method="POST" id="form">
                   <div class="form__name">
                       <input
                       id="name"
