--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="src/assets/slick/slick.css" />
     <link rel="stylesheet" href="src/assets/slick/slick-theme.css" />
     <link rel="stylesheet" href="src/assets/css/header.css" />
-    <link rel="stylesheet" href="src/assets/css/nav-responsive.css" />
+    <link rel="stylesheet" href="src/assets/css/mediaQueries.css" />
   </head>
 
   <body>
@@ -296,6 +296,7 @@
            <div class="contact-section__form">
               <form action="formSubmit.php" method="POST" id="form">
                   <div class="form__name">
+                    <label for="name">First name</label>
                       <input
                       id="name"
                       name="name"
@@ -304,6 +305,7 @@
                       maxlength="32"
                       required
                     />
+                    <label for="surname">Surname</label>
                     <input
                     id="surname"
                     name="surname"
@@ -313,7 +315,7 @@
                     required
                   />
                   </div>
-  
+                  <label for="phone">Phone</label>
                   <input
                     id="phone"
                     name="phone"
@@ -323,6 +325,8 @@
                     maxlength="12"
                     required
                   />
+                  <label for="select-service">Select service</label>
+
                   <select id="select-service" name="select-service">
                     <option value="Select service" disabled>Select Service</option>
                       <option value="Service">Service</option>
